logging/elasticsearch-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: logging
  labels:
    k8s-app: elasticsearch
spec:
  selector:
    matchLabels:
      k8s-app: elasticsearch
  template:
    metadata:
      labels:
        k8s-app: elasticsearch
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - nuc5
      containers:
      - name: elasticsearch
        #image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
        image: elasticsearch:7.8.0
        #imagePullPolicy: Always
        ports:
          - name: rest
            containerPort: 9200
          - name: elasticsearch
            containerPort: 9300
        livenessProbe:
          httpGet:
            path: /_cluster/health
            port: rest
            scheme: HTTP
          initialDelaySeconds: 40
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: rest
          initialDelaySeconds: 30
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        volumeMounts:
        - name: data-volume
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: data-volume
        hostPath:
          path: /volumes/logging/elasticsearch
          type: Directory
