logging/elasticsearch-service-rest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: elasticsearch
  name: elasticsearch-rest
  namespace: logging
spec:
  ports:
  - port: 9200
    protocol: TCP
    targetPort: 9200
  selector:
    k8s-app: elasticsearch
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
