logging/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: elasticsearch
  name: elasticsearch
  namespace: logging
spec:
  ports:
  - port: 9300
    protocol: TCP
    targetPort: 9300
  selector:
    k8s-app: elasticsearch
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
