logging/fluent-bit-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: fluent-bit-server
  name: fluent-bit-server
  namespace: logging
spec:
  ports:
  - port: 24224
    protocol: TCP
    targetPort: 24224
  selector:
    k8s-app: fluent-bit-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
