logging/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kibana
  name: kibana
  namespace: logging
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    k8s-app: kibana
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
